feat: update package.json and types.ts for portfolio project
- Changed project name to "vu-phan-hoai-sang-portfolio" and updated version to "1.0.0".
- Added project description.
- Updated dependencies: added @tsparticles/react, framer-motion, and react-tsparticles.
- Added isMaximized property and previousState to WindowInstance interface in types.ts.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,12 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Desktop Portfolio</title>
+    <title>Vũ Phan Hoài Sang - Portfolio</title>
+    <meta name="description" content="Portfolio cá nhân của Vũ Phan Hoài Sang - Sinh viên năm cuối đang tìm cơ hội thực tập. Fullstack Developer với kinh nghiệm .NET Core, Node.js, React và AI.">
+    <meta name="keywords" content="Vũ Phan Hoài Sang, Portfolio, Fullstack Developer, React, Node.js, .NET Core, AI, Sinh viên, Thực tập">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
