feat: update portfolio content and styling, including role changes and technology icons

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vũ Phan Hoài Sang - Portfolio</title>
-    <meta name="description" content="Portfolio cá nhân của Vũ Phan Hoài Sang - Sinh viên năm cuối đang tìm cơ hội thực tập. Fullstack Developer với kinh nghiệm .NET Core, Node.js, React và AI.">
-    <meta name="keywords" content="Vũ Phan Hoài Sang, Portfolio, Fullstack Developer, React, Node.js, .NET Core, AI, Sinh viên, Thực tập">
+    <meta name="description" content="Portfolio cá nhân của Vũ Phan Hoài Sang - Sinh viên năm cuối đang tìm cơ hội thực tập. Backend Developer với kinh nghiệm .NET Core, Node.js.">
+    <meta name="keywords" content="Vũ Phan Hoài Sang, Portfolio, Backend Developer, React, Node.js, .NET Core.">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
